AC_INIT([continuum], [0.1])
AM_INIT_AUTOMAKE([1.5 -Wall dist-bzip2 silent-rules])
AM_SILENT_RULES([yes])
AM_CONFIG_HEADER(config.h)

AC_LANG_CPLUSPLUS
AC_PROG_CXX
AM_PROG_LIBTOOL

PKG_CHECK_MODULES(GLIB, [glib-2.0 >= 2.12])
AC_SUBST(GLIB_CFLAGS)
AC_SUBST(GLIB_LIBS)

PKG_CHECK_MODULES(OGRE, [OGRE >= 1.2])
AC_SUBST(OGRE_CFLAGS)
AC_SUBST(OGRE_LIBS)

PKG_CHECK_MODULES(OIS, [OIS >= 1.0])
AC_SUBST(OIS_CFLAGS)
AC_SUBST(OIS_LIBS)

PKG_CHECK_MODULES(ODE, [ode >= 0.11])
AC_SUBST(ODE_CFLAGS)
AC_SUBST(ODE_LIBS)

AC_CONFIG_FILES(Makefile)
AC_CONFIG_FILES(src/Makefile)
AC_OUTPUT
